apps/changedetection/components/playwright/playwright-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: playwright
spec:
  ports:
    - port: 3000
      targetPort: playwright
  selector:
    app: playwright
